@@ -1,4 +1,7 @@
 5.0.10
+- Bugfix: Remove all Unicode chars from the generated CSS for the
+  smokygrey skin, because the TYPO3 asset collector does not
+  support them anymore.
 
 5.0.9
 - Bugfix: Add the missing "kreXX Messages" to the translation.
